# Hydro-Core

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/HydroCore/: Version.h
src/: CMakeLists.txt  EngineAPI.cpp  EngineAPI.h  FArchiveLoader.cpp  FArchiveLoader.h  HydroCore.cpp  HydroCore.h  LuaRuntime.cpp  LuaRuntime.h  LuaUObject.cpp  LuaUObject.h  Manifest.cpp  Manifest.h  ModManifest.cpp  ModManifest.h  PakLoader.cpp  PakLoader.h  PropertyMarshal.cpp  PropertyMarshal.h  RawFunctions.cpp  RawFunctions.h  SEH.h  dllmain.cpp
src/api/: HydroAssets.cpp  HydroAssets.h  HydroEvents.cpp  HydroEvents.h  HydroHUD.cpp  HydroHUD.h  HydroNet.cpp  HydroNet.h  HydroPak.cpp  HydroPak.h  HydroReflect.cpp  HydroReflect.h  HydroRegistry.cpp  HydroRegistry.h  HydroUI.cpp  HydroUI.h  HydroWorld.cpp  HydroWorld.h  ModuleRegistry.cpp  ModuleRegistry.h
src/engine/: AssetRegistry.cpp  AssetRegistry.h  Duplicate.cpp  Duplicate.h  FName.cpp  FName.h  GMalloc.cpp  GMalloc.h  GUObjectArray.cpp  GUObjectArray.h  Internal.cpp  Internal.h  IoStoreOnDemand.cpp  IoStoreOnDemand.h  Layout.cpp  Layout.h  ObjectLookup.cpp  ObjectLookup.h  Patternsleuth.h  ProcessEvent.cpp  ProcessEvent.h  Reflection.cpp  Reflection.h  Shaders.cpp  Shaders.h  Spawn.cpp  Spawn.h  WidgetInit.cpp  WidgetInit.h
src/registry/: Registry.cpp  Registry.h  RegistryManager.cpp  RegistryManager.h
types/: Hydro.Assets.d.lua  Hydro.Events.d.lua  Hydro.Net.d.lua  Hydro.World.d.lua  UObject.d.lua
